# FromRubyToRust

./: README.md  run.sh
ruby/: Gemfile  docker-entrypoint.sh
ruby/app/models/: my_model.rb
ruby/app/views/layouts/: application.html.erb
ruby/config/: application.rb  credentials.yml.enc
ruby/config/environments/: production.rb
ruby/db/: schema.rb
ruby/db/migrate/: 20220725090534_create_my_table.rb  20220725091033_populate_my_table.rb
ruby/lib/tasks/: benchmark.rake
rust/: Cargo.toml  development.sqlite3
rust/benches/: my_bench.rs
rust/src/: json.rs  lib.rs
rust/src/my_table/: mod.rs  orm.rs
