[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "my_bench"
harness = false

[dependencies]
futures-util = "0.3.21"
sea-orm = { version = "0.9.1", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
serde_path_to_error = "0.1.7"
tokio = { version = "1.20.1", features = ["parking_lot", "macros", "sync"] }
tracing = "0.1.35"

[dev-dependencies]
criterion = { version = "0.3.6", features = ["async_tokio"] }
