[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "my_bench"
harness = false

[dependencies]
futures-util = "0.3.24"
sea-orm = { version = "0.9.2", features = ["macros", "sqlx-sqlite", "runtime-tokio-rustls"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde_path_to_error = "0.1.8"
tokio = { version = "1.21.2", features = ["parking_lot", "macros", "sync"] }
tracing = "0.1.36"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio"] }
